# history

./: .gitignore  .keepalive  README.md  ae_engine.py  bgm_generator.py  bot.py  config.py  documentary_main.py  generate_video.py  icon_library.py  keyword_extractor.py  llm_client.py  optimal_schedule.json  pexels_client.py  pyproject.toml  renderer.py  requirements.txt  scheduler.py  scheduler_state.json  storyboard_generator.py  thulir_bot.py  thulir_enterprise_bot.py  thulir_trigger.txt  thulir_v2_bot.py  topic_discovery.py  upload_state.json  visual_renderer.py  whiteboard_engine.py  youtube_uploader.py
.github/workflows/: cleanup_artifacts.yml  daily_video.yml  documentary_daily.yml  generate_video.yml  keepalive.yml  thulir_daily.yml  thulir_enterprise.yml  thulir_test.yml  thulir_unified.yml
config/: colors.yml  emotions.yml  fallback_topics.yml  platform.yml  scenes.yml  topics.yml  voice.yml
data/: topic_history.json
output/state/: daily_schedule.json  topic_history.json
scripts/: encode_youtube_credentials.py  validate_youtube_token.py
src/animation_engine/: animation_engine.py  documentary_scenes.py  motion_effects.py  visual_variety.py
src/asset_engine/: asset_engine.py  background_tints.py  decoration_engine.py  lottie_renderer.py  scene_panel_engine.py
src/core/: config_loader.py  font_resolver.py  free_guard.py  llm_client.py  llm_json_parser.py  llm_policy.py  llm_registry.py  models.py
src/image_engine/: __init__.py  image_engine.py
tests/: test_pipeline_v3.py  test_platform.py  test_stock_video_engine.py
thulir_enterprise/: state.json
(+33 files in other folders)
